--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>
-        {Jordan}
-    </h2>
+    <h1>
+        Welcome to Jordan Personal Blog
+    </h1>
 </body>
 </html>
